# snu-etl

./: README.md  const.py  dl.py  etl.py  pyproject.toml  util.py
snuetl/: etl.py  util.py
snuetl/models/: __init__.py  announcements.py  base.py  dashboard.py  users.py
