[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snu-etl"
version = "0.1.0"
description = "SNU ETL API Python package"
authors = [{ name="bunniesnu" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[tool.setuptools]
packages = ["snuetl"]

[project.urls]
"Source" = "https://github.com/bunniesnu/snu-etl"